# nuggetizer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md  pyproject.toml  requirements.txt
.claude/skills/nuggetizer-eval/: SKILL.md
.claude/skills/nuggetizer-eval/references/: metrics.md
.claude/skills/nuggetizer-eval/scripts/: compare.py
.claude/skills/nuggetizer-install/: SKILL.md
.claude/skills/nuggetizer-install/references/: extras.md
.claude/skills/nuggetizer-quickstart/: SKILL.md
.claude/skills/nuggetizer-quickstart/references/: cli-examples.md  input-output-examples.md  prompt-templates.md
.claude/skills/nuggetizer-verify/: SKILL.md
.claude/skills/nuggetizer-verify/scripts/: verify.sh
.github/workflows/: pr-format.yml
.pyre/: pyre.stderr
docs/: cli-for-agents.md
docs/release-notes/: release-notes-v0.0.6.md
examples/: async_e2e.py  common.py  e2e.py  e2e_example.py  pipeline_demo.py  sync_e2e.py  sync_pipeline_demo.py
scripts/: assign_nuggets.py  assign_nuggets_retrieve_results.py  calculate_metrics.py  create_nuggets.py  quality_gate.py  score_nuggets.py
src/nuggetizer/api/: app.py  routes.py  runtime.py
src/nuggetizer/cli/: __init__.py  adapters.py  config.py  execution.py  introspection.py  introspection_metadata.py  io.py  logging_utils.py  main.py  main_support.py  normalize.py  operations.py  prompt_view.py  responses.py  script_compat.py  spec.py  validation.py  validation_helpers.py  view.py
src/nuggetizer/core/: _llm_shared.py  async_llm.py  base.py  llm.py  metrics.py  types.py
src/nuggetizer/models/: async_nuggetizer.py  nuggetizer.py
src/nuggetizer/prompts/: __init__.py  assigner_prompts.py  creator_prompts.py  scorer_prompts.py  service.py  template_loader.py
src/nuggetizer/prompts/prompt_templates/: README.md  assigner_2grade_template.yaml  assigner_template.yaml  creator_template.yaml  scorer_template.yaml
src/nuggetizer/utils/: __init__.py  api.py  display.py
tests/: test_cli_main.py  test_cli_normalize.py  test_examples.py  test_integration_pipeline.py  test_live_openai_smoke.py  test_llm_handlers.py  test_nuggetizer_model.py  test_prompt_templates.py  test_scripts.py
tests/core/: __init__.py  test_llm.py
