[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nuggetizer"
version = "0.0.6"
description = "A package for Nuggetizer - a tool for information nugget creation and assignment to LLM-generated answers."
readme = "README.md"
authors = [
    { name = "Ronak Pradeep", email = "rpradeep@uwaterloo.ca" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Nuggetizer", "Fact Recall", "LLM", "Nuggets", "Fact Extraction", "RAG Evaluation", "Evaluation", "RAG"]
dynamic = ["dependencies"]
requires-python = ">= 3.11"

[project.scripts]
nuggetizer = "nuggetizer.cli.main:main"

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]
all = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[dependency-groups]
dev = [
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "pytest>=8.4.2",
    "ruff>=0.12.0",
    "shtab>=1.7.0",
    "types-PyYAML",
    "types-requests",
    "types-tqdm",
]

[project.urls]
Homepage = "https://github.com/castorini/nuggetizer"

[tool.bumpver]
current_version = "0.0.6"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"', 'version = "{version}"'
]
"README.md" = [
    "{version}",
]

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "nuggetizer",
    "nuggetizer.api",
    "nuggetizer.cli",
    "nuggetizer.core",
    "nuggetizer.models",
    "nuggetizer.utils",
]
namespaces = false

[tool.setuptools]
provides = ["nuggetizer"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = false
disallow_incomplete_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
cache_dir = ".mypy_cache"
incremental = true

[tool.setuptools.package-data]
"nuggetizer.prompts.prompt_templates" = ["*.yaml"] 

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "core: deterministic CLI, prompt, and handler regression coverage",
    "integration: deterministic offline pipeline regression coverage",
    "live: provider-backed smoke coverage that requires explicit opt-in",
]
addopts = "--strict-markers"
